# category

./: .README.md.kate-swp  .gitignore  .move.md.kate-swp  COMMIT.sh  README.md  TODO  clean  clean.sh  commit_wip.sh  move.md  move.sh  prepare.md
HEPFORGE/nusigma-pyr/work/nusigma-1.19-pyr/: HISTORY  README.TXT  conf.gfortran  config.status  configure  configure.ac  makefile.in  nufunc.f  readf65.f  readf65.kumac  readf67.f
HEPFORGE/nusigma-pyr/work/nusigma-1.19-pyr/cteq6/: Cteq6Pdf-2004.txt
HEPFORGE/nusigma-pyr/work/nusigma-1.19-pyr/fig/: anusigma.eps  dsde-nu-p-cc-100-sim.ps  dsdtheta-nu-p-cc-100-sim.ps  nu-n-cc-fit.eps  nu-n-cc-fit10.eps  nu-n-nc-fit.eps  nu-n-nc-fit10.eps  nu-p-cc-fit.eps  nu-p-cc-fit10.eps  nu-p-nc-fit.eps  nu-p-nc-fit10.eps  nubar-n-cc-fit.eps  nubar-n-cc-fit10.eps  nubar-n-nc-fit.eps  nubar-n-nc-fit10.eps  nubar-p-cc-fit.eps  nubar-p-cc-fit10.eps  nubar-p-nc-fit.eps  nubar-p-nc-fit10.eps  nucheck.ps  nusigcheck-cc.eps  nusigcheck-nc.eps  nusigma-comp.eps  nusigma.eps  sigma-tau-suppression.ps
HEPFORGE/nusigma-pyr/work/nusigma-1.19-pyr/inc/: nupar.h  nuroot.f  nuver.f  nuver.h
HEPFORGE/nusigma-pyr/work/nusigma-1.19-pyr/macros/: anusigma.kumac  eps.kumac  nusigcheck_cc.kumac  nusigcheck_nc.kumac  nusigma-comp.kumac  nusigma.kumac  nusigmafit.kumac  nusigmafit10.kumac  plsetup.kumac  ps.kumac  r0-enu2.kumac
HEPFORGE/nusigma-pyr/work/nusigma-1.19-pyr/mains/: makefile  makefile.in  nudsde.f  nudsdesim.f  nusigcheck.f  nusigcheck2.f  nusigma.f  nusigmaxfind.f
HEPFORGE/nusigma-pyr/work/nusigma-1.19-pyr/scr/: config.pl
HEPFORGE/nusigma-pyr/work/nusigma-1.19-pyr/src/: Cteq6Pdf-2004.f  Cteq6Pdf-2008.f  dsdlxdly.f  dsdly.f  dsdxdy.f  dsdy.f  makefile  makefile.in  nuNevent.f  nucross.f  nucrossdiff.f  nucrossdiffl.f  nucrossdiffz.f  nudsdlxdly.f  nudsdlxdlymax.f  nudsdlxdy.f  nudsdxdy.f  nusetup.f  nusig.f  nusigint.f  pdf.f
HEPFORGE/samurai/work/samurai-2.1.1/: Makefile.am  Makefile.in  README  configure  configure.ac  makedepend.perl  samurai.pc.in
HEPFORGE/samurai/work/samurai-2.1.1/QCDLoop-1.9/: Makefile.am  Makefile.in
HEPFORGE/samurai/work/samurai-2.1.1/QCDLoop-1.9/ff/: Makefile.am  Makefile.in  ffinit.f  ffinit.f.in
HEPFORGE/samurai/work/samurai-2.1.1/QCDLoop-1.9/ql/: Makefile.am  Makefile.in
HEPFORGE/samurai/work/samurai-2.1.1/avh_olo-2.2.1/: Makefile.am  Makefile.in  avh_olo_main.f90  avh_olo_xkind.f90.in
HEPFORGE/samurai/work/samurai-2.1.1/examples/: Makefile.am  Makefile.in
HEPFORGE/samurai/work/samurai-2.1.1/examples/A51/: Makefile.am  Makefile.dep  Makefile.in  amp4.f90  mabdk.f90  mtopo4.f90  process.f90  vars.f90
HEPFORGE/samurai/work/samurai-2.1.1/examples/DrellYan/: Makefile.am  Makefile.dep  Makefile.in  amp3.f90  mtopo3.f90  process.f90  vars.f90
HEPFORGE/samurai/work/samurai-2.1.1/examples/EightPhotons/: Makefile.am  Makefile.dep  Makefile.in  amp8.f90  dl8.f90  mtopo8.f90  process.f90  rambo.f90  vars.f90
HEPFORGE/samurai/work/samurai-2.1.1/examples/FiveGluons/: Makefile.am  Makefile.dep  Makefile.in  amp5.f90  mtopo5.f90  process.f90  vars.f90
HEPFORGE/samurai/work/samurai-2.1.1/examples/FourPhotons/: Makefile.am  Makefile.dep  Makefile.in  amp4.f90  dl4.f90  mtopo4.f90  process.f90  vars.f90
HEPFORGE/samurai/work/samurai-2.1.1/examples/Rank6/: Makefile.am  Makefile.dep  Makefile.in  mxnum.f90  process.f90  vars.f90
HEPFORGE/samurai/work/samurai-2.1.1/examples/SixGluons/: Makefile.am  Makefile.dep  Makefile.in  amp6.f90  mtopo6.f90  process.f90  vars.f90
HEPFORGE/samurai/work/samurai-2.1.1/examples/SixPhotons/: Makefile.dep  Makefile.in  amp6.f90  dl6.f90  mtopo6.f90  process.f90  vars.f90
HEPFORGE/samurai/work/samurai-2.1.1/examples/uussbb/: Makefile.am  Makefile.dep  Makefile.in  matrix.f90  test.f90
HEPFORGE/samurai/work/samurai-2.1.1/m4/.svn/: entries
HEPFORGE/samurai/work/samurai-2.1.1/samurai/: Makefile.am  Makefile.in  msamurai.f90  msamurai.f90.in
KDE/kira/work/kira-2.0/: AUTHORS  ChangeLog  README.rst  configure.ac  job_options_summary  meson.build  meson_options.txt
KDE/kira/work/kira-2.0/doc/: releasenotes-1.1.rst
KDE/kira/work/kira-2.0/doc/kira-1.0-publication/: lit.bib  paper.tex  topos.tex  utphysmod.bst
KDE/kira/work/kira-2.0/doc/kira-1.2-releasenotes/: releasenotes.bbl  releasenotes.tex
KDE/kira/work/kira-2.0/doc/kira-2.0-publication/: kira-2.0.tex  literature.bib
KDE/kira/work/kira-2.0/examples/aah-nl-sing/: amplitude_aah_nl_sing  amplitude_to_reduce  generate_input.yaml  jobs_reduction.yaml
KDE/kira/work/kira-2.0/examples/box/: export.yaml  jobs.yaml  myintegrals
KDE/kira/work/kira-2.0/examples/general_propagators/: jobs.yaml
KDE/kira/work/kira-2.0/examples/insert_prefactors/: jobs.yaml  preferred  scal2  xints
KDE/kira/work/kira-2.0/examples/magic_relations/: basis  marmax.yaml
KDE/kira/work/kira-2.0/examples/master_equations/: jobs.yaml
KDE/kira/work/kira-2.0/examples/sunrise/: basisChange  jobs.yaml
KDE/kira/work/kira-2.0/examples/tennisCourt/: jobs.yaml
KDE/kira/work/kira-2.0/examples/topbox/: export.yaml  findmagic.yaml
KDE/kira/work/kira-2.0/examples/topo4/: advanced_jobs_reduction.yaml  basisChange  export.yaml  jobs_reduction.yaml  list
KDE/kira/work/kira-2.0/examples/topo5/: jobs_reduction.yaml
KDE/kira/work/kira-2.0/examples/topo7/: basisChange  export.yaml  file4trim  jobs1.yaml  jobs2.yaml  jobs3.yaml  seeds7  seeds7x  trim_the_system.yaml
KDE/kira/work/kira-2.0/examples/topo7_parallel/: export.yaml  merge.yaml  parallel1.yaml  parallel2.yaml  prepare.yaml  readme.txt
KDE/kira/work/kira-2.0/examples/topo7massless/: basisChange  export.yaml  jobs_reduction.yaml
KDE/kira/work/kira-2.0/examples/topoA/: jobs_reduction.yaml
KDE/kira/work/kira-2.0/examples/userDefinedSystem1/: jobs.yaml  list
KDE/kira/work/kira-2.0/examples/userDefinedSystem2/: export.yaml  generate_input.yaml  jobs.yaml  masters
KDE/kira/work/kira-2.0/src/: Makefile.am  meson.build
KDE/kira/work/kira-2.0/src/gzstream/: gzstream.cpp  gzstream.h
KDE/kira/work/kira-2.0/src/kira/: ReadYamlFiles.cpp  (+25 more)
KDE/kira/work/kira-2.0/subprojects/: firefly.wrap  yaml-cpp.wrap
(+19871 files in other folders)
