noinst_LIBRARIES=libuussbb_helicity0.a

AM_FCFLAGS=-I${pkgincludedir} \
	   -I$(top_srcdir)/examples/uussbb/common

libuussbb_helicity0_a_SOURCES=\
abbrevh0l0.f90 \
abbrevh0l1.f90 \
d100h0l1.f90 \
d101h0l1.f90 \
d102h0l1.f90 \
d103h0l1.f90 \
d104h0l1.f90 \
d105h0l1.f90 \
d106h0l1.f90 \
d107h0l1.f90 \
d108h0l1.f90 \
d109h0l1.f90 \
d10h0l1.f90 \
d110h0l1.f90 \
d111h0l1.f90 \
d112h0l1.f90 \
d113h0l1.f90 \
d114h0l1.f90 \
d115h0l1.f90 \
d116h0l1.f90 \
d117h0l1.f90 \
d118h0l1.f90 \
d119h0l1.f90 \
d11h0l1.f90 \
d120h0l1.f90 \
d121h0l1.f90 \
d122h0l1.f90 \
d123h0l1.f90 \
d124h0l1.f90 \
d125h0l1.f90 \
d126h0l1.f90 \
d127h0l1.f90 \
d128h0l1.f90 \
d129h0l1.f90 \
d12h0l1.f90 \
d130h0l1.f90 \
d131h0l1.f90 \
d132h0l1.f90 \
d133h0l1.f90 \
d134h0l1.f90 \
d135h0l1.f90 \
d136h0l1.f90 \
d137h0l1.f90 \
d138h0l1.f90 \
d139h0l1.f90 \
d13h0l1.f90 \
d140h0l1.f90 \
d141h0l1.f90 \
d142h0l1.f90 \
d143h0l1.f90 \
d144h0l1.f90 \
d145h0l1.f90 \
d146h0l1.f90 \
d147h0l1.f90 \
d148h0l1.f90 \
d149h0l1.f90 \
d14h0l1.f90 \
d150h0l1.f90 \
d151h0l1.f90 \
d152h0l1.f90 \
d153h0l1.f90 \
d154h0l1.f90 \
d155h0l1.f90 \
d156h0l1.f90 \
d157h0l1.f90 \
d158h0l1.f90 \
d159h0l1.f90 \
d15h0l1.f90 \
d160h0l1.f90 \
d161h0l1.f90 \
d162h0l1.f90 \
d163h0l1.f90 \
d164h0l1.f90 \
d165h0l1.f90 \
d166h0l1.f90 \
d167h0l1.f90 \
d168h0l1.f90 \
d169h0l1.f90 \
d16h0l1.f90 \
d170h0l1.f90 \
d171h0l1.f90 \
d172h0l1.f90 \
d173h0l1.f90 \
d174h0l1.f90 \
d175h0l1.f90 \
d176h0l1.f90 \
d177h0l1.f90 \
d178h0l1.f90 \
d179h0l1.f90 \
d17h0l1.f90 \
d180h0l1.f90 \
d181h0l1.f90 \
d182h0l1.f90 \
d183h0l1.f90 \
d184h0l1.f90 \
d185h0l1.f90 \
d186h0l1.f90 \
d187h0l1.f90 \
d188h0l1.f90 \
d189h0l1.f90 \
d18h0l1.f90 \
d190h0l1.f90 \
d191h0l1.f90 \
d192h0l1.f90 \
d193h0l1.f90 \
d194h0l1.f90 \
d195h0l1.f90 \
d196h0l1.f90 \
d197h0l1.f90 \
d198h0l1.f90 \
d199h0l1.f90 \
d19h0l1.f90 \
d1h0l1.f90 \
d200h0l1.f90 \
d201h0l1.f90 \
d202h0l1.f90 \
d203h0l1.f90 \
d204h0l1.f90 \
d205h0l1.f90 \
d206h0l1.f90 \
d207h0l1.f90 \
d208h0l1.f90 \
d209h0l1.f90 \
d20h0l1.f90 \
d210h0l1.f90 \
d211h0l1.f90 \
d212h0l1.f90 \
d213h0l1.f90 \
d214h0l1.f90 \
d215h0l1.f90 \
d216h0l1.f90 \
d217h0l1.f90 \
d218h0l1.f90 \
d219h0l1.f90 \
d21h0l1.f90 \
d220h0l1.f90 \
d221h0l1.f90 \
d222h0l1.f90 \
d223h0l1.f90 \
d224h0l1.f90 \
d225h0l1.f90 \
d226h0l1.f90 \
d227h0l1.f90 \
d228h0l1.f90 \
d229h0l1.f90 \
d22h0l1.f90 \
d230h0l1.f90 \
d231h0l1.f90 \
d232h0l1.f90 \
d233h0l1.f90 \
d234h0l1.f90 \
d235h0l1.f90 \
d236h0l1.f90 \
d237h0l1.f90 \
d238h0l1.f90 \
d239h0l1.f90 \
d23h0l1.f90 \
d240h0l1.f90 \
d241h0l1.f90 \
d242h0l1.f90 \
d243h0l1.f90 \
d244h0l1.f90 \
d245h0l1.f90 \
d246h0l1.f90 \
d247h0l1.f90 \
d248h0l1.f90 \
d249h0l1.f90 \
d24h0l1.f90 \
d250h0l1.f90 \
d251h0l1.f90 \
d252h0l1.f90 \
d253h0l1.f90 \
d254h0l1.f90 \
d255h0l1.f90 \
d256h0l1.f90 \
d257h0l1.f90 \
d258h0l1.f90 \
d25h0l1.f90 \
d26h0l1.f90 \
d27h0l1.f90 \
d28h0l1.f90 \
d29h0l1.f90 \
d2h0l1.f90 \
d30h0l1.f90 \
d31h0l1.f90 \
d32h0l1.f90 \
d33h0l1.f90 \
d34h0l1.f90 \
d35h0l1.f90 \
d36h0l1.f90 \
d37h0l1.f90 \
d38h0l1.f90 \
d39h0l1.f90 \
d3h0l1.f90 \
d40h0l1.f90 \
d41h0l1.f90 \
d42h0l1.f90 \
d43h0l1.f90 \
d44h0l1.f90 \
d45h0l1.f90 \
d46h0l1.f90 \
d47h0l1.f90 \
d48h0l1.f90 \
d49h0l1.f90 \
d4h0l1.f90 \
d50h0l1.f90 \
d51h0l1.f90 \
d52h0l1.f90 \
d53h0l1.f90 \
d54h0l1.f90 \
d55h0l1.f90 \
d56h0l1.f90 \
d57h0l1.f90 \
d58h0l1.f90 \
d59h0l1.f90 \
d5h0l1.f90 \
d60h0l1.f90 \
d61h0l1.f90 \
d62h0l1.f90 \
d63h0l1.f90 \
d64h0l1.f90 \
d65h0l1.f90 \
d66h0l1.f90 \
d67h0l1.f90 \
d68h0l1.f90 \
d69h0l1.f90 \
d6h0l1.f90 \
d70h0l1.f90 \
d71h0l1.f90 \
d72h0l1.f90 \
d73h0l1.f90 \
d74h0l1.f90 \
d75h0l1.f90 \
d76h0l1.f90 \
d77h0l1.f90 \
d78h0l1.f90 \
d79h0l1.f90 \
d7h0l1.f90 \
d80h0l1.f90 \
d81h0l1.f90 \
d82h0l1.f90 \
d83h0l1.f90 \
d84h0l1.f90 \
d85h0l1.f90 \
d86h0l1.f90 \
d87h0l1.f90 \
d88h0l1.f90 \
d89h0l1.f90 \
d8h0l1.f90 \
d90h0l1.f90 \
d91h0l1.f90 \
d92h0l1.f90 \
d93h0l1.f90 \
d94h0l1.f90 \
d95h0l1.f90 \
d96h0l1.f90 \
d97h0l1.f90 \
d98h0l1.f90 \
d99h0l1.f90 \
d9h0l1.f90 \
diagramsh0l0.f90 \
diagramsh0l1.f90 \
init0.f90

CLEANFILES=\
uussbb_abbrevh0l0.mod \
uussbb_abbrevh0l1.mod \
uussbb_d100h0l1.mod \
uussbb_d101h0l1.mod \
uussbb_d102h0l1.mod \
uussbb_d103h0l1.mod \
uussbb_d104h0l1.mod \
uussbb_d105h0l1.mod \
uussbb_d106h0l1.mod \
uussbb_d107h0l1.mod \
uussbb_d108h0l1.mod \
uussbb_d109h0l1.mod \
uussbb_d10h0l1.mod \
uussbb_d110h0l1.mod \
uussbb_d111h0l1.mod \
uussbb_d112h0l1.mod \
uussbb_d113h0l1.mod \
uussbb_d114h0l1.mod \
uussbb_d115h0l1.mod \
uussbb_d116h0l1.mod \
uussbb_d117h0l1.mod \
uussbb_d118h0l1.mod \
uussbb_d119h0l1.mod \
uussbb_d11h0l1.mod \
uussbb_d120h0l1.mod \
uussbb_d121h0l1.mod \
uussbb_d122h0l1.mod \
uussbb_d123h0l1.mod \
uussbb_d124h0l1.mod \
uussbb_d125h0l1.mod \
uussbb_d126h0l1.mod \
uussbb_d127h0l1.mod \
uussbb_d128h0l1.mod \
uussbb_d129h0l1.mod \
uussbb_d12h0l1.mod \
uussbb_d130h0l1.mod \
uussbb_d131h0l1.mod \
uussbb_d132h0l1.mod \
uussbb_d133h0l1.mod \
uussbb_d134h0l1.mod \
uussbb_d135h0l1.mod \
uussbb_d136h0l1.mod \
uussbb_d137h0l1.mod \
uussbb_d138h0l1.mod \
uussbb_d139h0l1.mod \
uussbb_d13h0l1.mod \
uussbb_d140h0l1.mod \
uussbb_d141h0l1.mod \
uussbb_d142h0l1.mod \
uussbb_d143h0l1.mod \
uussbb_d144h0l1.mod \
uussbb_d145h0l1.mod \
uussbb_d146h0l1.mod \
uussbb_d147h0l1.mod \
uussbb_d148h0l1.mod \
uussbb_d149h0l1.mod \
uussbb_d14h0l1.mod \
uussbb_d150h0l1.mod \
uussbb_d151h0l1.mod \
uussbb_d152h0l1.mod \
uussbb_d153h0l1.mod \
uussbb_d154h0l1.mod \
uussbb_d155h0l1.mod \
uussbb_d156h0l1.mod \
uussbb_d157h0l1.mod \
uussbb_d158h0l1.mod \
uussbb_d159h0l1.mod \
uussbb_d15h0l1.mod \
uussbb_d160h0l1.mod \
uussbb_d161h0l1.mod \
uussbb_d162h0l1.mod \
uussbb_d163h0l1.mod \
uussbb_d164h0l1.mod \
uussbb_d165h0l1.mod \
uussbb_d166h0l1.mod \
uussbb_d167h0l1.mod \
uussbb_d168h0l1.mod \
uussbb_d169h0l1.mod \
uussbb_d16h0l1.mod \
uussbb_d170h0l1.mod \
uussbb_d171h0l1.mod \
uussbb_d172h0l1.mod \
uussbb_d173h0l1.mod \
uussbb_d174h0l1.mod \
uussbb_d175h0l1.mod \
uussbb_d176h0l1.mod \
uussbb_d177h0l1.mod \
uussbb_d178h0l1.mod \
uussbb_d179h0l1.mod \
uussbb_d17h0l1.mod \
uussbb_d180h0l1.mod \
uussbb_d181h0l1.mod \
uussbb_d182h0l1.mod \
uussbb_d183h0l1.mod \
uussbb_d184h0l1.mod \
uussbb_d185h0l1.mod \
uussbb_d186h0l1.mod \
uussbb_d187h0l1.mod \
uussbb_d188h0l1.mod \
uussbb_d189h0l1.mod \
uussbb_d18h0l1.mod \
uussbb_d190h0l1.mod \
uussbb_d191h0l1.mod \
uussbb_d192h0l1.mod \
uussbb_d193h0l1.mod \
uussbb_d194h0l1.mod \
uussbb_d195h0l1.mod \
uussbb_d196h0l1.mod \
uussbb_d197h0l1.mod \
uussbb_d198h0l1.mod \
uussbb_d199h0l1.mod \
uussbb_d19h0l1.mod \
uussbb_d1h0l1.mod \
uussbb_d200h0l1.mod \
uussbb_d201h0l1.mod \
uussbb_d202h0l1.mod \
uussbb_d203h0l1.mod \
uussbb_d204h0l1.mod \
uussbb_d205h0l1.mod \
uussbb_d206h0l1.mod \
uussbb_d207h0l1.mod \
uussbb_d208h0l1.mod \
uussbb_d209h0l1.mod \
uussbb_d20h0l1.mod \
uussbb_d210h0l1.mod \
uussbb_d211h0l1.mod \
uussbb_d212h0l1.mod \
uussbb_d213h0l1.mod \
uussbb_d214h0l1.mod \
uussbb_d215h0l1.mod \
uussbb_d216h0l1.mod \
uussbb_d217h0l1.mod \
uussbb_d218h0l1.mod \
uussbb_d219h0l1.mod \
uussbb_d21h0l1.mod \
uussbb_d220h0l1.mod \
uussbb_d221h0l1.mod \
uussbb_d222h0l1.mod \
uussbb_d223h0l1.mod \
uussbb_d224h0l1.mod \
uussbb_d225h0l1.mod \
uussbb_d226h0l1.mod \
uussbb_d227h0l1.mod \
uussbb_d228h0l1.mod \
uussbb_d229h0l1.mod \
uussbb_d22h0l1.mod \
uussbb_d230h0l1.mod \
uussbb_d231h0l1.mod \
uussbb_d232h0l1.mod \
uussbb_d233h0l1.mod \
uussbb_d234h0l1.mod \
uussbb_d235h0l1.mod \
uussbb_d236h0l1.mod \
uussbb_d237h0l1.mod \
uussbb_d238h0l1.mod \
uussbb_d239h0l1.mod \
uussbb_d23h0l1.mod \
uussbb_d240h0l1.mod \
uussbb_d241h0l1.mod \
uussbb_d242h0l1.mod \
uussbb_d243h0l1.mod \
uussbb_d244h0l1.mod \
uussbb_d245h0l1.mod \
uussbb_d246h0l1.mod \
uussbb_d247h0l1.mod \
uussbb_d248h0l1.mod \
uussbb_d249h0l1.mod \
uussbb_d24h0l1.mod \
uussbb_d250h0l1.mod \
uussbb_d251h0l1.mod \
uussbb_d252h0l1.mod \
uussbb_d253h0l1.mod \
uussbb_d254h0l1.mod \
uussbb_d255h0l1.mod \
uussbb_d256h0l1.mod \
uussbb_d257h0l1.mod \
uussbb_d258h0l1.mod \
uussbb_d25h0l1.mod \
uussbb_d26h0l1.mod \
uussbb_d27h0l1.mod \
uussbb_d28h0l1.mod \
uussbb_d29h0l1.mod \
uussbb_d2h0l1.mod \
uussbb_d30h0l1.mod \
uussbb_d31h0l1.mod \
uussbb_d32h0l1.mod \
uussbb_d33h0l1.mod \
uussbb_d34h0l1.mod \
uussbb_d35h0l1.mod \
uussbb_d36h0l1.mod \
uussbb_d37h0l1.mod \
uussbb_d38h0l1.mod \
uussbb_d39h0l1.mod \
uussbb_d3h0l1.mod \
uussbb_d40h0l1.mod \
uussbb_d41h0l1.mod \
uussbb_d42h0l1.mod \
uussbb_d43h0l1.mod \
uussbb_d44h0l1.mod \
uussbb_d45h0l1.mod \
uussbb_d46h0l1.mod \
uussbb_d47h0l1.mod \
uussbb_d48h0l1.mod \
uussbb_d49h0l1.mod \
uussbb_d4h0l1.mod \
uussbb_d50h0l1.mod \
uussbb_d51h0l1.mod \
uussbb_d52h0l1.mod \
uussbb_d53h0l1.mod \
uussbb_d54h0l1.mod \
uussbb_d55h0l1.mod \
uussbb_d56h0l1.mod \
uussbb_d57h0l1.mod \
uussbb_d58h0l1.mod \
uussbb_d59h0l1.mod \
uussbb_d5h0l1.mod \
uussbb_d60h0l1.mod \
uussbb_d61h0l1.mod \
uussbb_d62h0l1.mod \
uussbb_d63h0l1.mod \
uussbb_d64h0l1.mod \
uussbb_d65h0l1.mod \
uussbb_d66h0l1.mod \
uussbb_d67h0l1.mod \
uussbb_d68h0l1.mod \
uussbb_d69h0l1.mod \
uussbb_d6h0l1.mod \
uussbb_d70h0l1.mod \
uussbb_d71h0l1.mod \
uussbb_d72h0l1.mod \
uussbb_d73h0l1.mod \
uussbb_d74h0l1.mod \
uussbb_d75h0l1.mod \
uussbb_d76h0l1.mod \
uussbb_d77h0l1.mod \
uussbb_d78h0l1.mod \
uussbb_d79h0l1.mod \
uussbb_d7h0l1.mod \
uussbb_d80h0l1.mod \
uussbb_d81h0l1.mod \
uussbb_d82h0l1.mod \
uussbb_d83h0l1.mod \
uussbb_d84h0l1.mod \
uussbb_d85h0l1.mod \
uussbb_d86h0l1.mod \
uussbb_d87h0l1.mod \
uussbb_d88h0l1.mod \
uussbb_d89h0l1.mod \
uussbb_d8h0l1.mod \
uussbb_d90h0l1.mod \
uussbb_d91h0l1.mod \
uussbb_d92h0l1.mod \
uussbb_d93h0l1.mod \
uussbb_d94h0l1.mod \
uussbb_d95h0l1.mod \
uussbb_d96h0l1.mod \
uussbb_d97h0l1.mod \
uussbb_d98h0l1.mod \
uussbb_d99h0l1.mod \
uussbb_d9h0l1.mod \
uussbb_diagramsh0l0.mod \
uussbb_diagramsh0l1.mod \
uussbb_init0.mod

include Makefile.dep
